src/test/deca/context/invalid/LE/extendsitself.deca
// Historique:
//    cree le 19/01/2022

class A extends A{
    int x;

    int ajoute(int x){
        return x+1.0;
    }
}
